<resources>
    <string name="app_name">DAS-Proyect1</string>
    <string name="inicioDeSesion">Inicio de Sesión</string>
    <string name="crearUnaCuenta">Crear una cuenta</string>
    <string name="idiomasDisponibles">Idiomas disponibles:</string>
    <string name="EU">Vasco</string>
    <string name="ES">Español</string>
    <string name="EN">Inglés</string>
    <string name="user">Nombre de usuario</string>
    <string name="pass">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="crear">Crear</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="o">o</string>
    <string name="repiteLaContraseña">Repite la contraseña</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_entrada">Entrada</string>
    <string name="menu_gallery">Entrada</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_rutinas">Rutinas</string>
    <string name="menu_cambiarIdioma">Cambiar idioma</string>
    <string name="menu_notificaciones">Notificaciones</string>
    <string name="menu_ejercicios">Todos los ejercicios</string>
    <string name="menu_calendario">Calendario</string>
    <string name="login">login</string>
    <string name="singin">singin</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_ajustes">Ajustes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_contactanos">Contactanos</string>
    <string name="menu_rutinasCompletada">Ver rutinas completadas</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="ajustes_usuario">Ajustes usuario</string>
    <string name="pause">Pause</string>
    <string name="reanudar">Reanudar</string>
    <string name="siguiente">Siguiente</string>
    <string name="ajustes_tema">Tema</string>
    <string name="ajustes_infoUsuario">Información de usuario</string>
    <string name="ajustes_idioma">Idioma</string>
    <string name="ajustes_configurar_notificaciones">Configurar notificaciones</string>
    <string name="ajustes_notificaciones">Notificaciones</string>
    <string name="ajustes_notificacionesActivadas">Notificaciones activadas</string>
    <string name="ajustes_notificacionesDesactivadas">Notificaciones desactivadas</string>
    <string name="ajustes_cambiaInfoUsuario">Cambia la información de tu usuario</string>
    <string name="ajustes_azul">Azul</string>
    <string name="ajustes_naranja">Naranja</string>
    <string name="ajustes_verde">Verde</string>
    <string name="ajustes_morado">Morado</string>
    <string name="ajustes_otros">Otros ajustes</string>
    <string name="ajustes_nombreUsuario">Nombre de usuario</string>
    <string name="ajustes_correo">Correo electrónico</string>
    <string name="ajustes_contraseña">Contraseña</string>
    <string name="ajustes_toast">Toast</string>
    <string name="ajustes_toastActivadas">Toast activadas</string>
    <string name="ajustes_toastDesactivadas">Toast desactivadas</string>
    <string name="notif_titulo_finEntrenamiento">Fin entrenamiento</string>
    <string name="notif_cuerpo_hassuperadoelentrena">Has superado todo el entrenamiento. ¡Felicidades!</string>
    <string name="notif_boton_iniciarOtraRutina">Iniciar otra rutina</string>
    <string name="alert_error">Error</string>
    <string name="alert_useropassincorrecto">El usuario o la contraseña son incorrectos</string>
    <string name="alert_aceptar">Aceptar</string>
    <string name="alert_lascontraseñasnocoinciden">Las contraseñas no coinciden</string>
    <string name="alert_nosehapodidocrealelusuario">No se ha podido crear el usuario</string>
    <string name="alert_cerrarSesion">Cerrar sesión</string>
    <string name="alert_estasseguroquequierescerrarsesion">¿Estás seguro que quieres cerrar la sesión?</string>
    <string name="email_dudaValoracionaplicacion">Duda / Valoración aplicación</string>
    <string name="email_mandanosmensaje">Mandanos tu mensaje</string>
    <string name="toast_siguienteEjercicio">Muy bien. Pasamos al siguiente ejercicio</string>
    <string name="toast_usuarioCambiadoCorrectamente">Usuario actualizado correctamente</string>
    <string name="toast_emailCambiadoCorrectamente">Correo actualizado correctamente</string>
    <string name="toast_contraseñaCambiadoCorrectamente">Contraseña actualizada correctamente</string>
    <string name="toast_usuarionoCambiadoCorrectamente">No se ha podido actualizar el usuario</string>
    <string name="toast_emailnoCambiadoCorrectamente">No se ha podido actualizar el correo</string>
    <string name="toast_contraseñanoCambiadoCorrectamente">No se ha podido actualizar la contraseña</string>
    <string name="btn_atras">Anterior</string>
    <string name="alert_eliminarRutina">Eliminar rutina</string>
    <string name="alert_seguroquequiereseliminarlarutina">¿Estás seguro que quieres eliminar la rutina?</string>
    <string name="alert_insertatitulorutina">Inserta un titulo para la rutina</string>
    <string name="alert_cancelar">Cancelar</string>
    <string name="alert_ok">Ok</string>
    <string name="alert_eligeejerciciosaañadir">Elige los ejercicios que quieras añadir a la rutina</string>
    <string name="toast_sehaeliminadolarutina">Se ha eliminado la rutina</string>
    <string name="toast_rutinaCreada">Se ha creado la rutina</string>
    <string name="menu_googleMaps">Mapa de Google</string>
    <string name="menu_camara">Cámara</string>
    <string name="menu_crearAlarma">Crear alarma</string>
    <string name="menu_recomiendaLaApp">Recomienda la app</string>
    <string name="menu_imagenesFirebase">Imagenes de Firebase</string>
    <string name="maps_ponerMarca">Poner marca</string>
    <string name="maps_quieresPonerUnaMarcaEnLasCordenadas">"Quieres poner una marca en las coordenadas: "</string>
    <string name="maps_puntoInicial">Punto inicial</string>
    <string name="maps_tocaparacalculareltrayecto">Toca para calcular el trayecto</string>
    <string name="maps_trayecto">Trayecto</string>
    <string name="maps_duracion">Duración</string>
    <string name="maps_kilometros">Kilometros</string>
    <string name="maps_calculardistancia">Calcular distancia</string>
    <string name="maps_quierescalcularelcaminohastaestepunto">Quieres calcular el camino hasta este punto?</string>
    <string name="camara_galeria">Galería</string>
    <string name="camara_camara">Cámara</string>
    <string name="camara_subirafirebase">Subir a Firebase</string>
    <string name="camara_vertodoslosarchivossubidos">Ver todos los archivos subidos</string>
    <string name="carama_indicaunnombreparalafoto">Indica un nombre para la foto</string>
    <string name="camara_toast_Sehasubidolaimagen">Se ha subido la imagen</string>
    <string name="camara_toast_Nosehapodidosubirlaimagen">No se ha podido subir la imagen</string>
    <string name="camara_toast_Nosehanconcedidolospermisosparaabrirlacamara">No se han concedido los permisos para abrir la camara</string>
    <string name="camara_toast_Nosehaconcedidoelpermisodeescritura">No se ha concedido el permiso de escritura</string>
    <string name="camara_toast_Tienesqueinsertarunnombre">Tienes que insertar un nombre</string>
    <string name="camara_toast_Tienesqueinsertarunafoto">Tienes que insertar una foto</string>
    <string name="alarma_Eligeunahoraparaestablecerlaalarma">Elige una hora para establecer la alarma</string>
    <string name="alarma_elegir">Elegir</string>
    <string name="alarma_escribeunmensaje">Escribe un mensaje</string>
    <string name="alarma_seleccionalosdiasquequieresactivarla">Selecciona los días que quieras activarla</string>
    <string name="alarma_lunes">Lunes</string>
    <string name="alarma_martes">Martes</string>
    <string name="alarma_miercoles">Miércoles</string>
    <string name="alarma_jueves">Jueves</string>
    <string name="alarma_viernes">Viernes</string>
    <string name="alarma_sabado">Sábado</string>
    <string name="alarma_domingo">Domingo</string>
    <string name="alarma_crearAlarma">Crear alarma</string>
    <string name="alarma_toast_Tienesqueestablecerunahora">Tienes que establecer una hora</string>
    <string name="alarma_toast_Nopuedesoportarestaaccion">No puede soportar esta acción</string>
    <string name="recomendar_Enviarmensaje">Enviar mensaje</string>
    <string name="recomendar_Quieresenviarunmensajederecomendaciónalusuario">Quieres enviar un mensaje de recomendación al usuario:</string>
    <string name="recomendar_bodymensaje">Hola. Te recomiendo que te descargues la aplicación DAS_PROYECT1, es genial!</string>
    <string name="recomendar_Editarcontacto">Editar contacto</string>
    <string name="recomendar_Quiereseditarelcontacto">Quieres editar el contacto?</string>
    <string name="recomendar_Añadelosdatosdelnuevocontacto">Añade los datos del nuevo contacto</string>
    <string name="recomendar_Nombre">Nombre</string>
    <string name="recomendar_Telefono">Teléfono</string>
    <string name="recomendar_toast_Nosehaconcedidoelpermisodeleercontactos">No se ha concedido el permiso de leer contactos</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="alarma_TocaEmpezarAHacerEjercicio">Toca empezar a hacer ejercicio</string>
    <string name="alarma_Crearnotificacion">Crear notificación</string>
    <string name="alarma_notifcacionProgramada">Notificación programada</string>
</resources>