<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendario"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/nav_rutinas"
            android:icon="@drawable/ic_rutinas"
            android:title="@string/menu_rutinas" />
        <item
            android:id="@+id/nav_ejercicios"
            android:icon="@drawable/ic_ejer"
            android:title="@string/menu_ejercicios" />

        <item
            android:id="@+id/nav_rutinasCompletadas"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_rutinasCompletada" />

        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_googleMaps" />

        <item
            android:id="@+id/camaraFragment"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_camara" />

        <item
            android:id="@+id/alarmaFragment"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_crearAlarma" />

        <item
            android:id="@+id/recomendarFragment"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_recomiendaLaApp" />

        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/setting"
            android:title="@string/menu_ajustes" />

        <item
            android:id="@+id/nav_contactanos"
            android:icon="@drawable/ic_email"
            android:title="@string/menu_contactanos" />
        <item
            android:id="@+id/nav_logoff"
            android:icon="@drawable/ic_poweroff"
            android:title="@string/menu_logout" />


    </group>
</menu>