<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alarma.AlarmaFragment">


    <Button
        android:id="@+id/buttonCrearAlarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarma_crearAlarma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <Button
        android:id="@+id/buttonElegirHora"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:text="@string/alarma_elegir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.751"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/textViewHoraElegida"
        android:layout_width="348dp"
        android:layout_height="32dp"
        android:text="@string/alarma_Eligeunahoraparaestablecerlaalarma"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/editTextMinutos"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:hint="00"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/editTextHoras"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:hint="00"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <EditText
        android:id="@+id/editTextMensajeAlarma"
        android:layout_width="205dp"
        android:layout_height="63dp"
        android:text="@string/alarma_TocaEmpezarAHacerEjercicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarma_escribeunmensaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="296dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonLunes"
                    android:layout_width="138dp"
                    android:layout_height="match_parent"
                    android:text="@string/alarma_lunes" />

                <RadioButton
                    android:id="@+id/radioButtonViernes"
                    android:layout_width="184dp"
                    android:layout_height="26dp"
                    android:text="@string/alarma_viernes" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMartes"
                    android:layout_width="138dp"
                    android:layout_height="25dp"
                    android:text="@string/alarma_martes" />

                <RadioButton
                    android:id="@+id/radioButtonSabado"
                    android:layout_width="184dp"
                    android:layout_height="26dp"
                    android:text="@string/alarma_sabado" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMiercoles"
                    android:layout_width="138dp"
                    android:layout_height="25dp"
                    android:text="@string/alarma_miercoles" />

                <RadioButton
                    android:id="@+id/radioButtonDomingo"
                    android:layout_width="184dp"
                    android:layout_height="26dp"
                    android:text="@string/alarma_domingo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonJueves"
                    android:layout_width="138dp"
                    android:layout_height="25dp"
                    android:text="@string/alarma_jueves" />

            </LinearLayout>

        </LinearLayout>
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarma_seleccionalosdiasquequieresactivarla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/buttonCrearnotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarma_Crearnotificacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCrearAlarma"
        app:layout_constraintVertical_bias="0.229" />


</androidx.constraintlayout.widget.ConstraintLayout>