<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="User Information">

        <EditTextPreference
            app:key="username"
            app:title="username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="email"
            app:title="email"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="pass"
            app:title="pass"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="Idioma">
        <ListPreference
            app:defaultValue="es"
            app:entries="@array/idioma_entries"
            app:entryValues="@array/idioma_values"
            app:key="idioma"
            app:title="Idioma"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Notificaciones">

        <SwitchPreferenceCompat
            app:key="notif"
            app:summaryOff="Notificaciones desactivadas"
            app:summaryOn="Notificaciones activadas"
            app:title="@string/menu_notificaciones" />

        <SwitchPreferenceCompat
            app:dependency="notif"
            app:key="notifbaj"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Otros ajustes">
        <ListPreference
            app:defaultValue="es"
            app:entries="@array/idioma_entries"
            app:entryValues="@array/idioma_values"
            app:key="idioma"
            app:title="Tema"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


</PreferenceScreen>