<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpActivity">

    <Button
        android:id="@+id/btn_iniciaSesion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickIniciarSesion"
        android:text="@string/iniciarSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_o2"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/textView_o2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_crearcuenta2"
        app:layout_constraintVertical_bias="0.107" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="194dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editView_user2"
        android:layout_width="343dp"
        android:layout_height="54dp"
        android:hint="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img2"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/editView_mail"
        android:layout_width="343dp"
        android:layout_height="54dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editView_user2"
        app:layout_constraintVertical_bias="0.062" />

    <EditText
        android:id="@+id/editView_pass2"
        android:layout_width="343dp"
        android:layout_height="54dp"
        android:hint="@string/pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editView_mail"
        app:layout_constraintVertical_bias="0.071" />

    <EditText
        android:id="@+id/editView_passAgain"
        android:layout_width="343dp"
        android:layout_height="54dp"
        android:hint="@string/repiteLaContraseña"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editView_pass2"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/btn_crearcuenta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickCrearCuenta"
        android:text="@string/crear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editView_passAgain"
        app:layout_constraintVertical_bias="0.112" />
</androidx.constraintlayout.widget.ConstraintLayout>