<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_rutinas">

    <fragment
        android:id="@+id/nav_rutinas"
        android:name="com.example.das_proyect1.ui.rutinas.RutinasFragment"
        android:label="@string/menu_rutinas"
        tools:layout="@layout/fragment_rutinas" >
        <action
            android:id="@+id/action_nav_rutinas_to_rutEjerViewPagerFragment"
            app:destination="@id/rutEjerViewPagerFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_ejercicios"
        android:name="com.example.das_proyect1.ui.ejercicios.EjerciciosFragment"
        android:label="@string/menu_ejercicios"
        tools:layout="@layout/fragment_ejercicios" />

    <fragment
        android:id="@+id/nav_ajustes"
        android:name="com.example.das_proyect1.AjustesFragment"
        android:label="@string/menu_ajustes"
        tools:layout="@xml/fragment_ajustes" />
    <fragment
        android:id="@+id/rutEjerViewPagerFragment"
        android:name="com.example.das_proyect1.rutEjer.RutEjerFragment"
        android:label="fragment_rutejerviewpager"
        tools:layout="@layout/fragment_rutejerviewpager" >
        <action
            android:id="@+id/action_rutEjerViewPagerFragment_to_nav_rutinas"
            app:destination="@id/nav_rutinas" />
    </fragment>

</navigation>